# xrdsim

./: .gitignore  README.md  pyproject.toml
scripts/: plot_xrd.py  simualte_perovskites.py  simulate_perovskites.py  simulate_slices.py
src/xrdsim/: __init__.py  calculator.py  calculators.py  constants.py  scattering_information.py
src/xrdsim/augmentations/: background.py  noise.py
src/xrdsim/numpy/: crystallite_size.py  peak_calculator.py  peak_profiles.py
src/xrdsim/tools/: plotter.py
