[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "xrdsim"
description="A package XRD simulation."
version = "0.0.1"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Jona Östreicher", email = "jona.oestreicher@kit.edu" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Operating System :: MacOS",
]
requires-python = ">=3.9, <3.13"
dependencies = [
  "numba",
  "pymatgen",
]