[build-system]
requires = ["poetry-core>=1.2.0b2"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "xrdsim"
version = "0.0.1"
description = "An XRD simulation package"
license = "MIT"
authors = ["Jona Östreicher <jona.oestreicher@kit.edu>"]
maintainers = ["Jona Östreicher <jona.oestreicher@kit.edu>"]
readme = "README.md"
packages = [
    { include = "xrdsim", from = "src" }
]
include = [
    "README.md",
]
exclude = []

[tool.poetry.dependencies]
python = ">=3.10.0,<3.13"
numba = "^0.60.0"
pymatgen = "^2024.9.10"
tqdm = "^4.66.5"
torch = {version = "^2.4.1", optional = true}
seaborn = "^0.13.2"

[tool.poetry.extras]
torch = ["torch"]
