[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xrdsim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastparquet>=2024.11.0",
    "numba>=0.61.0",
    "numpy>2",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "psutil>=7.0.0",
    "pyarrow>=19.0.1",
    "pymatgen>=2025.2.18",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
]
